# neex

./: .gitignore  .lintstagedrc.js  .npmignore  .prettierignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bunfig.toml  package-lock.json  package.json  tsconfig.json  tt.text  verify-neex.sh  verify-neexa.sh
.amazonq/rules/memory-bank/: guidelines.md  product.md  structure.md  tech.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  help.yml
.github/workflows/: auto-format.yml  benchmark.yml  canary-release.yml  ci-enhanced.yml  ci.yml  contributors.yml  notify-discord.yml  release-please.yml  release.yml
apps/docs/: next.config.ts
apps/docs/src/app/og/docs/[...slug]/: route.tsx
benchmarks/: 2025-12-10.md
crates/: Cargo.toml
crates/neex-cli/: Cargo.toml
crates/neex-cli/src/: main.rs  tui.rs
crates/neex-core/: Cargo.toml
crates/neex-core/src/: ast_hasher.rs  cache.rs  cloud.rs  graph.rs  hasher.rs  lib.rs  runner.rs  scheduler.rs  symbol_graph.rs  symbols.rs
crates/neex-daemon/: Cargo.toml
crates/neex-daemon/src/: lib.rs  p2p.rs  server.rs  state.rs  watcher.rs
crates/neex-napi/: Cargo.toml
demo/: README.md  package.json
demo/apps/api/: .gitignore  package.json
demo/apps/api/src/: server.ts
demo/apps/web/: eslint.config.js  package.json
demo/apps/web/app/: globals.css  page.tsx
help/: README.md  RELEASE_GUIDE.md
npm/neex/: README.md  install.js  package.json
scripts/: format.sh  verify-neex.sh
src/: build-manager.ts  cli.ts  dev-manager.ts  index.ts  logger-manager.ts  logger.ts  runner.ts  start-manager.ts  types.ts  utils.ts
src/commands/: build-commands.ts  dev-commands.ts  index.ts  init-commands.ts  run-commands.ts  server-commands.ts  start-commands.ts
