[workspace]
resolver = "2"
members = [
    "neex-core",
    "neex-daemon", 
    "neex-napi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Foshati"]
license = "MIT"
repository = "https://github.com/Foshati/neexa"

[workspace.dependencies]
# Hashing
blake3 = "1.5"

# Parallelism
rayon = "1.10"

# File walking
ignore = "0.4"
walkdir = "2.5"

# Async
tokio = { version = "1.42", features = ["full"] }

# File watching
notify = "7.0"

# Graph
petgraph = "0.6"

# Key-Value DB
sled = "0.34"

# JS/TS Parser
swc_core = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
