[package]
name = "neex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tokio = { workspace = true }
sled = { workspace = true }
glob = { workspace = true }
rusty-s3 = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
